--- a/manifest/package.xml
+++ b/manifest/package.xml
@@ -1,11 +1,9 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <Package xmlns="http://soap.sforce.com/2006/04/metadata">
-  <!--
   <types>
     <name>CustomApplication</name>
     <members>Veeva_Diagnostic_Tool</members>
   </types>
-  -->
   <types>
     <name>ApexClass</name>
     <members>VDT_AnalysisDashboardFilterController</members>
@@ -22,7 +20,7 @@
     <members>VDT_DataCalculationSelector</members>
     <members>VDT_DataCalculationService</members>
     <members>VDT_DataCalculationTriggerHandler</members>
-    <!-- <members>VDT_DataCalculationTriggerTest</members> -->
+    <members>VDT_DataCalculationTriggerTest</members>
     <members>VDT_DateRangePickerController</members>
     <members>VDT_DateRangePickerControllerTest</members>
     <members>VDT_EmailService</members>
@@ -46,18 +44,15 @@
     <members>VDT_TriggerHandler</members>
     <members>VDT_VeevaUsersController</members>
   </types>
-  <!--
   <types>
     <name>CustomMetadata</name>
     <members>VDT_General_Setting.Default</members>
     <members>VDT_Object_Country_Field_Mapping.Account</members>
   </types>
-  -->
   <types>
     <name>EmailTemplate</name>
     <members>unfiled$public/VDT_FieldCamparisonCalculationFinished</members>
   </types>
-  <!--
   <types>
     <name>FlexiPage</name>
     <members>Veeva_Diagnostic_Tool_UtilityBar</members>
@@ -70,7 +65,6 @@
     <members>VDT_Object_Batch_Size_Mapping__mdt-VDT Object Batch Size Mapping Layout</members>
     <members>VDT_Object_Country_Field_Mapping__mdt-VDT Object Country Field Mapping Layout</members>
   </types>
-  -->
   <types>
     <name>LightningComponentBundle</name>    
     <members>vdt_onekeyAnalysisDetails</members>
@@ -178,12 +172,10 @@
     <name>ValidationRule</name>
     <members>VDT_General_Setting__mdt.Running_Calculations_Upper_Bound</members>
   </types>
-  <!--
   <types>
     <name>Profile</name>
     <members>Admin</members>
   </types>
-  -->
   <types>
     <name>StaticResource</name>
     <members>vdt_chartjs</members>
@@ -192,12 +184,10 @@
     <members>vdt_styles</members>
     <members>vdt_onekey_summary_table</members>
   </types>
-  <!--
   <types>
     <name>CustomTab</name>
     <members>Veeva_Diagnostic_Tool</members>
   </types>
-  -->
   <types>
     <name>ApexTrigger</name>
     <members>VDT_DataCalculationTrigger</members>
