adding latest package xml file

--- a/manifest/package.xml
+++ b/manifest/package.xml
@@ -1,241 +1,139 @@
 <?xml version="1.0" encoding="UTF-8" standalone="yes"?>
 <Package xmlns="http://soap.sforce.com/2006/04/metadata">
-  <types>
-    <members>VDT_AnalysisDashboardFilterController</members>
-    <members>VDT_AnalysisDashboardFilterCtrlTest</members>
-    <members>VDT_AttachmentSelector</members>
-    <members>VDT_AttachmentService</members>
-    <members>VDT_AttachmentServiceTest</members>
-    <members>VDT_CalculationLogsController</members>
-    <members>VDT_CalculationLogsControllerTest</members>
-    <members>VDT_CalculationMonitoringController</members>
-    <members>VDT_CalculationMonitoringCtrlTest</members>
-    <members>VDT_CustomMetadataService</members>
-    <members>VDT_CustomMetadataServiceTest</members>
-    <members>VDT_DataCalculationSelector</members>
-    <members>VDT_DataCalculationService</members>
-    <members>VDT_DataCalculationTriggerHandler</members>
-    <members>VDT_DataCalculationTriggerTest</members>
-    <members>VDT_DateRangePickerController</members>
-    <members>VDT_DateRangePickerControllerTest</members>
-    <members>VDT_EmailService</members>
-    <members>VDT_EmailTemplateSelector</members>
-    <members>VDT_FieldsSummaryCalculationBatch</members>
-    <members>VDT_HttpService</members>
-    <members>VDT_Log</members>
-    <members>VDT_LogMessage</members>
-    <members>VDT_LogSeverity</members>
-    <members>VDT_LogTriggerHandler</members>
-    <members>VDT_MasterAnalysisCalculationBatch</members>
-    <members>VDT_MasterAnalysisCalculationBuilder</members>
-    <members>VDT_MasterDataAnalysisController</members>
-    <members>VDT_ObjectCalculationBuilder</members>
-    <members>VDT_ObjectService</members>
-    <members>VDT_ObjectsCalculationController</members>
-    <members>VDT_ObjectsCalculationFilterController</members>
-    <members>VDT_OptionWrapper</members>
-    <members>VDT_PageLayoutService</members>
-    <members>VDT_RecordTypeSelector</members>
-    <members>VDT_RecordTypeService</members>
-    <members>VDT_ToolingAPICalloutMock</members>
-    <members>VDT_ToolingAPIService</members>
-    <members>VDT_ToolingCustomObjectResponse</members>
-    <members>VDT_ToolingPageLayoutResponse</members>
-    <members>VDT_TriggerHandler</members>
-    <members>VDT_VeevaUsersController</members>
-    <members>VDT_ProductAdoptionController</members>
-    <name>ApexClass</name>
-  </types>
-  <types>
-    <members>VDT_DataCalculationTrigger</members>
-    <members>VDT_LogTrigger</members>
-    <name>ApexTrigger</name>
-  </types>
-  <types>
-    <members>Veeva_Diagnostic_Tool</members>
-    <name>CustomApplication</name>
-  </types>
-  <types>
-    <members>VDT_Account_Record_Type_Mapping__mdt.Account_Record_Types__c</members>
-    <members>VDT_Calculation_Status_Update__e.Calculation_Id__c</members>
-    <members>VDT_Calculation_Status_Update__e.Status__c</members>
-    <members>VDT_Data_Calculation__c.End_Date__c</members>
-    <members>VDT_Data_Calculation__c.End_Month__c</members>
-    <members>VDT_Data_Calculation__c.End_Year__c</members>
-    <members>VDT_Data_Calculation__c.Start_Date__c</members>
-    <members>VDT_Data_Calculation__c.Start_Month__c</members>
-    <members>VDT_Data_Calculation__c.Start_Year__c</members>
-    <members>VDT_Data_Calculation__c.Status__c</members>
-    <members>VDT_Data_Calculation__c.VDT_Calculation_Date__c</members>
-    <members>VDT_Data_Calculation__c.VDT_Calculation_Result__c</members>
-    <members>VDT_Data_Calculation__c.VDT_Country__c</members>
-    <members>VDT_Data_Calculation__c.VDT_Job_Created_Date__c</members>
-    <members>VDT_Data_Calculation__c.VDT_Job_End_Date__c</members>
-    <members>VDT_Data_Calculation__c.VDT_Job_Start_Date__c</members>
-    <members>VDT_Data_Calculation__c.VDT_Object_Name__c</members>
-    <members>VDT_General_Setting__mdt.Apex_Async_Execution_Daily_Allocation__c</members>
-    <members>VDT_General_Setting__mdt.Batch_Size__c</members>
-    <members>VDT_General_Setting__mdt.Cycle_Plan_Enabled__c</members>
-    <members>VDT_General_Setting__mdt.Default_Country_Code_Field__c</members>
-    <members>VDT_General_Setting__mdt.Maximum_Calculation_Requests__c</members>
-    <members>VDT_General_Setting__mdt.Maximum_Running_Calculations__c</members>
-    <members>VDT_General_Setting__mdt.Standard_Field_Identifier__c</members>
-    <members>VDT_General_Setting__mdt.Start_Date_Year_Decrement__c</members>
-    <members>VDT_General_Setting__mdt.VDT_Default_Specialty_Field__c</members>
-    <members>VDT_General_Setting__mdt.VDT_Is_Territory_Management_Active__c</members>
-    <members>VDT_KPI_Configuration__mdt.Description__c</members>
-    <members>VDT_KPI_Configuration__mdt.VDT_Default_Target__c</members>
-    <members>VDT_KPI_Configuration__mdt.VDT_Display_Order__c</members>
-    <members>VDT_KPI_Configuration__mdt.VDT_Formula_Text__c</members>
-    <members>VDT_KPI_Configuration__mdt.VDT_Help_Text__c</members>
-    <members>VDT_KPI_Configuration__mdt.VDT_Is_Active__c</members>
-    <members>VDT_KPI_Configuration__mdt.VDT_Type__c</members>
-    <members>VDT_KPI_by_Country__mdt.VDT_Country__c</members>
-    <members>VDT_KPI_by_Country__mdt.VDT_KPI_Configuration__c</members>
-    <members>VDT_KPI_by_Country__mdt.VDT_Target__c</members>
-    <members>VDT_Log_Event__c.Log_Data__c</members>
-    <members>VDT_Log_Event__c.Quiddity__c</members>
-    <members>VDT_Log_Event__c.Request_Id__c</members>
-    <members>VDT_Log_Event__c.Severity__c</members>
-    <members>VDT_Log__e.Log_Message__c</members>
-    <members>VDT_Log__e.Quiddity__c</members>
-    <members>VDT_Log__e.Request_Id__c</members>
-    <members>VDT_Log__e.Severity__c</members>
-    <members>VDT_Object_Batch_Size_Mapping__mdt.Batch_Size__c</members>
-    <members>VDT_Object_Country_Field_Mapping__mdt.Country_Field_Reference__c</members>
-    <name>CustomField</name>
-  </types>
-  <types>
-    <members>VDT_Account_Record_Type_Mapping.External_Customers</members>
-    <members>VDT_Account_Record_Type_Mapping.Internal_Customers</members>
-    <members>VDT_General_Setting.Default</members>
-    <members>VDT_KPI_Configuration.OneKey_Without_Visit_and_Cycle_Plan</members>
-    <members>VDT_KPI_Configuration.Onekey_Without_cycle_plan</members>
-    <members>VDT_KPI_Configuration.Onekey_Without_ratings</members>
-    <members>VDT_KPI_Configuration.Onekey_Without_visit</members>
-    <members>VDT_KPI_Configuration.Onekey_aligned_to_territories</members>
-    <members>VDT_KPI_Configuration.Onekey_vs_Non_One_Key</members>
-    <members>VDT_KPI_Configuration.Onekey_without_address</members>
-    <members>VDT_KPI_by_Country.KPI_1_PL</members>
-    <members>VDT_Object_Country_Field_Mapping.Account</members>
-    <name>CustomMetadata</name>
-  </types>
-  <types>
-    <members>VDT_Account_Record_Type_Mapping__mdt</members>
-    <members>VDT_Calculation_Status_Update__e</members>
-    <members>VDT_Data_Calculation__c</members>
-    <members>VDT_General_Setting__mdt</members>
-    <members>VDT_KPI_Configuration__mdt</members>
-    <members>VDT_KPI_by_Country__mdt</members>
-    <members>VDT_Log_Event__c</members>
-    <members>VDT_Log__e</members>
-    <members>VDT_Object_Batch_Size_Mapping__mdt</members>
-    <members>VDT_Object_Country_Field_Mapping__mdt</members>
-    <name>CustomObject</name>
-  </types>
-  <types>
-    <members>Veeva_Diagnostic_Tool</members>
-    <name>CustomTab</name>
-  </types>
-  <types>
-    <members>VDT_EmailTemplates/VDT_FieldCamparisonCalculationFinished</members>
-    <members>VDT_EmailTemplates/VDT_MasterAnalysisCalculationFinished</members>
-    <name>EmailTemplate</name>
-  </types>
-  <types>
-    <members>Veeva_Diagnostic_Tool_UtilityBar</members>
-    <name>FlexiPage</name>
-  </types>
-  <types>
-    <members>VDT_Data_Calculation__c-Data Calculation Layout</members>
-    <members>VDT_Data_Calculation__c-Master Data Analysis Layout</members>
-    <members>VDT_General_Setting__mdt-VDT General Setting Layout</members>
-    <members>VDT_Log_Event__c-Log Event Layout</members>
-    <members>VDT_Object_Batch_Size_Mapping__mdt-VDT Object Batch Size Mapping Layout</members>
-    <members>VDT_Object_Country_Field_Mapping__mdt-VDT Object Country Field Mapping Layout</members>
-    <name>Layout</name>
-  </types>
-  <types>
-    <members>vdt_analysisDashboardFilter</members>
-    <members>vdt_app</members>
-    <members>vdt_autocompleteInput</members>
-    <members>vdt_calculationButton</members>
-    <members>vdt_calculationLogs</members>
-    <members>vdt_calculationLogsFilter</members>
-    <members>vdt_calculationMonitoring</members>
-    <members>vdt_csvUtil</members>
-    <members>vdt_datatable</members>
-    <members>vdt_dateRangePicker</members>
-    <members>vdt_enrichedText</members>
-    <members>vdt_fieldDetailLevelSummary</members>
-    <members>vdt_fieldsHighLevelSummary</members>
-    <members>vdt_home</members>
-    <members>vdt_homeGraphs</members>
-    <members>vdt_illustrationProvider</members>
-    <members>vdt_monthYearPicker</members>
-    <members>vdt_numberKpiIndicator</members>
-    <members>vdt_objects</members>
-    <members>vdt_objectsCalculation</members>
-    <members>vdt_objectsCalculationFilter</members>
-    <members>vdt_objectsDashboard</members>
-    <members>vdt_objectsFieldsUsageChart</members>
-    <members>vdt_onekeyAnalysisDetails</members>
-    <members>vdt_onekeyAnalysisSummary</members>
-    <members>vdt_onekeyCountryInput</members>
-    <members>vdt_onekeyData</members>
-    <members>vdt_onekeyFilters</members>
-    <members>vdt_onekeyGraphs</members>
-    <members>vdt_onekeyHcoFilters</members>
-    <members>vdt_onekeyHcpFilters</members>
-    <members>vdt_onekeyLogs</members>
-    <members>vdt_onekeyLogsFilter</members>
-    <members>vdt_onekeyProductFilters</members>
-    <members>vdt_onekeyProgressBar</members>
-    <members>vdt_orgConnection</members>
-    <members>vdt_paginationItem</members>
-    <members>vdt_paginator</members>
-    <members>vdt_popover</members>
-    <members>vdt_productsAndHierarchy</members>
-    <members>vdt_profileIcon</members>
-    <members>vdt_profileOptions</members>
-    <members>vdt_sidebar</members>
-    <members>vdt_tabItem</members>
-    <members>vdt_tabs</members>
-    <members>vdt_unusedFieldsOnLayoutChart</members>
-    <members>vdt_utils</members>
-    <members>vdt_veevaUsers</members>
-    <members>vdt_workspace</members>
-    <name>LightningComponentBundle</name>
-  </types>
-  <types>
-    <members>vdt_hcoFilter</members>
-    <members>vdt_hcpFilter</members>
-    <members>vdt_onekeyCountryChannel</members>
-    <members>vdt_productFilter</members>
-    <members>vdt_refreshMonitoring</members>
-    <members>vdt_tabs</members>
-    <name>LightningMessageChannel</name>
-  </types>
-  <types>
-    <members>Admin</members>
-    <name>Profile</name>
-  </types>
-  <types>
-    <members>VDT_Data_Calculation__c.VDT_Master_Data_Analysis</members>
-    <members>VDT_Data_Calculation__c.VDT_Object_Field_Analysis</members>
-    <name>RecordType</name>
-  </types>
-  <types>
-    <members>vdt_chartjs</members>
-    <members>vdt_d3</members>
-    <members>vdt_moment</members>
-    <members>vdt_onekey_summary_table</members>
-    <members>vdt_styles</members>
-    <name>StaticResource</name>
-  </types>
-  <types>
-    <members>VDT_General_Setting__mdt.Running_Calculations_Upper_Bound</members>
-    <name>ValidationRule</name>
-  </types>
-  <version>50.0</version>
+    <types>
+        <members>VDT_AnalysisDashboardFilterController</members>
+        <members>VDT_AnalysisDashboardFilterCtrlTest</members>
+        <members>VDT_AttachmentSelector</members>
+        <members>VDT_AttachmentService</members>
+        <members>VDT_AttachmentServiceTest</members>
+        <members>VDT_CalculationLogsController</members>
+        <members>VDT_CalculationLogsControllerTest</members>
+        <members>VDT_CalculationMonitoringController</members>
+        <members>VDT_CalculationMonitoringCtrlTest</members>
+        <members>VDT_CalculationStatusTriggerHandler</members>
+        <members>VDT_CalculationStatusUpdateTriggerTest</members>
+        <members>VDT_CustomMetadataService</members>
+        <members>VDT_CustomMetadataServiceTest</members>
+        <members>VDT_DataCalculationDataFactory</members>
+        <members>VDT_DataCalculationSelector</members>
+        <members>VDT_DataCalculationService</members>
+        <members>VDT_DataCalculationTriggerHandler</members>
+        <members>VDT_DataCalculationTriggerTest</members>
+        <members>VDT_DateRangePicker</members>
+        <members>VDT_DateRangePickerController</members>
+        <members>VDT_DateRangePickerControllerTest</members>
+        <members>VDT_DateRangePickerTest</members>
+        <members>VDT_EmailService</members>
+        <members>VDT_EmailTemplateSelector</members>
+        <members>VDT_FieldsSummaryCalculationBatch</members>
+        <members>VDT_HttpService</members>
+        <members>VDT_Log</members>
+        <members>VDT_LogMessage</members>
+        <members>VDT_LogSeverity</members>
+        <members>VDT_LogTriggerHandler</members>
+        <members>VDT_LogTriggerTest</members>
+        <members>VDT_MasterAnalysisCalculationBatch</members>
+        <members>VDT_MasterAnalysisCalculationBuilder</members>
+        <members>VDT_MasterDataAnalysisController</members>
+        <members>VDT_MasterDataAnalysisControllerTest</members>
+        <members>VDT_ObjectCalculationBuilder</members>
+        <members>VDT_ObjectService</members>
+        <members>VDT_ObjectsCalculationController</members>
+        <members>VDT_ObjectsCalculationControllerTest</members>
+        <members>VDT_ObjectsCalculationFilterController</members>
+        <members>VDT_OptionWrapper</members>
+        <members>VDT_PageLayoutService</members>
+        <members>VDT_ProductAdoptionBatch</members>
+        <members>VDT_ProductAdoptionBuilder</members>
+        <members>VDT_ProductAdoptionController</members>
+        <members>VDT_ProductAdoptionControllerTest</members>
+        <members>VDT_ProductDataFactory</members>
+        <members>VDT_ProductSelector</members>
+        <members>VDT_ProductService</members>
+        <members>VDT_RecordTypeSelector</members>
+        <members>VDT_RecordTypeService</members>
+        <members>VDT_ToolingAPIService</members>
+        <members>VDT_ToolingCustomObjectResponse</members>
+        <members>VDT_ToolingPageLayoutResponse</members>
+        <members>VDT_TriggerHandler</members>
+        <members>VDT_UserDataFactory</members>
+        <members>VDT_VeevaUsersController</members>
+        <members>VDT_VeevaUsersControllerTest</members>
+        <name>ApexClass</name>
+    </types>
+    <types>
+        <members>VDT_Veeva_Container</members>
+        <name>ApexPage</name>
+    </types>
+    <types>
+        <members>*</members>
+        <name>ApexTestSuite</name>
+    </types>
+    <types>
+        <members>VDT_CalculationStatusUpdateTrigger</members>
+        <members>VDT_DataCalculationTrigger</members>
+        <members>VDT_LogTrigger</members>
+        <name>ApexTrigger</name>
+    </types>
+    <types>
+        <members>*</members>
+        <name>AuraDefinitionBundle</name>
+    </types>
+    <types>
+        <members>*</members>
+        <name>AuthProvider</name>
+    </types>
+    <types>
+        <members>*</members>
+        <name>ConnectedApp</name>
+    </types>
+    <types>
+        <members>Veeva_Diagnostic_Tool</members>
+        <name>CustomApplication</name>
+    </types>
+    <types>
+        <members>VDT_Account_Record_Type_Mapping__mdt</members>
+        <members>VDT_Calculation_Status_Update__e</members>
+        <members>VDT_Custom_Objects_Field_Mapping__mdt</members>
+        <members>VDT_Data_Calculation_Entry__c</members>
+        <members>VDT_Data_Calculation__c</members>
+        <members>VDT_General_Setting__mdt</members>
+        <members>VDT_KPI_Configuration__mdt</members>
+        <members>VDT_KPI_by_Country__mdt</members>
+        <members>VDT_Log_Event__c</members>
+        <members>VDT_Log__e</members>
+        <members>VDT_Object_Batch_Size_Mapping__mdt</members>
+        <members>VDT_Object_Country_Field_Mapping__mdt</members>
+        <members>VDT_Object_Product_Field_Mapping__mdt</members>
+        <name>CustomObject</name>
+    </types>
+    <types>
+        <members>VDT_Data_Calculation__c</members>
+        <members>VDT_Log_Event__c</members>
+        <members>Veeva_Diagnostic_Tool</members>
+        <members>Veeva_Diagnostic_Tool_VF</members>
+        <name>CustomTab</name>
+    </types>
+    <types>
+        <members>VDT_EmailTemplates/VDT_FieldCamparisonCalculationFinished</members>
+        <members>VDT_EmailTemplates/VDT_MasterAnalysisCalculationFinished</members>
+        <name>EmailTemplate</name>
+    </types>
+    <types>
+        <members>*</members>
+        <name>LightningComponentBundle</name>
+    </types>
+    <types>
+        <members>*</members>
+        <name>LightningMessageChannel</name>
+    </types>
+    <types>
+        <members>*</members>
+        <name>NamedCredential</name>
+    </types>
+    <types>
+        <members>BASE_CRM_Diagnostic_Tool_User</members>
+        <name>PermissionSet</name>
+    </types>
+    <version>50.0</version>
 </Package>
